# SmartTree

./: .gitignore  README.md  __init__.py  _checkers.py  _tree.py  _tree_node.py  build-extension.py  pyproject.toml  test_check_init_params.py  win_requirements.txt
.github/workflows/: run_tests.yml
multi_split_decision_tree/: _checkers.py  _exceptions.py  _tree.py  _tree_node.py  _utils.py
smarttree/: __init__.py  _builder.py  _cgini_index.pyi  _cgini_index.pyx  _check.py  _classes.py  _column_splitter.py  _constants.py  _criterion.pxd  _criterion.pyi  _criterion.pyx  _cy_column_splitter.pxd  _cy_column_splitter.pyi  _cy_column_splitter.pyx  _dataset.py  _node_splitter.py  _renderer.py  _tree.py  _tree_node.py  _types.py
tests/: conftest.py  test__check_init_params.py  test__check_score_params.py  test__criterion.py  test__fit.py  test__node_splitter.py  test__not_fitted_error.py  test__renderer.py  test__repr_tree.py  test__repr_tree_node.py  test_check_fit_data.py  test_check_fit_params.py  test_check_init_params.py  test_check_score_params.py  test_dataset.csv  test_dataset.parquet  test_not_fitted_error.py  test_repr_tree.py  test_repr_tree_node.py
tests/base/: test__tree.py  test_tree.py
tests/column_splitter/: test__base_column_splitter.py  test__cat_column_splitter.py  test__categorical_column_splitter.py  test__cy_base_column_splitter.py  test__num_column_splitter.py  test__numerical_column_splitter.py  test__rank_column_splitter.py
tests/decision_tree/: test__base_decision_tree.py
tests/decision_tree/base/: test__base_not_fitted.py  test__check_data.py  test__check_init_params.py  test__check_params.py  test__get_set_params.py  test__implementation.py  test__repr_tree.py
tests/decision_tree/classifier/: test__check_score_params.py  test__classifier_not_fitted.py  test__fit_predict.py  test__repr_tree.py
tests/node_splitter/: test__base_node_splitter.py  test__classification_node_splitter.py
