[tool.poetry]
name = "smarttree"
version = "0.1.0"
description = ""
authors = ["Mikhail Martin <mikhailmartin95@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
jupyterlab-execute-time = "^3.1.0"
isort = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
fastparquet = "^2024.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
