[tool.poetry]
name = "smarttree"
version = "0.1.0"
description = ""
authors = ["Mikhail Martin <mikhailmartin95@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
jupyterlab-execute-time = "^3.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
fastparquet = "^2024.11.0"
mypy = "^1.17.1"
pandas-stubs = "^2.3.2.250827"
scikit-learn-stubs = "^0.0.3"
ruff = "^0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
lines-after-imports = 2
