[build-system]
requires = ["poetry-core", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "smarttree"
version = "0.1.0"
description = "Custom Decision Tree with bells and whistles"
authors = ["Mikhail Martin <mikhailmartin95@yandex.ru>"]
readme = "README.md"
packages = [{ include = "smarttree" }]
include = [
    { path = "smarttree/**/*.pyd", format = "wheel" },
    { path = "smarttree/**/*.so", format = "wheel" },
    { path = "smarttree/**/*.lib", format = "wheel" },
]
exclude = ["**/*.c"]

[tool.poetry.build]
script = "build-extension.py"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.4"
scikit-learn = "^1.3.2"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
jupyterlab-execute-time = "^3.1.0"
cython = "^3.1.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
fastparquet = "^2024.11.0"
mypy = "^1.17.1"
pandas-stubs = "^2.3.2.250827"
scikit-learn-stubs = "^0.0.3"
ruff = "^0.12.12"

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
lines-after-imports = 2
